compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__tuple_int_float.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 514
expression: "#(1.0, 2, 3) == #(1, 2, 3)"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:17
  │
1 │ #(1.0, 2, 3) == #(1, 2, 3)
  │                 ^^^^^^^^^^

Expected type:

    #(Float, Int, Int)

Found type:

    #(Int, Int, Int)


